--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ logs/
 trackb_canperpos*.log
 trackb_canperpos_resume*.log
 results/track_b_smoke_*/
+results/track_b/**/summary.parquet
 results/track_b_canonical_perpos_v1/**/centering_means.pt
 results/track_b_canonical_perpos_v1/**/gram_matrices.pt
 results/track_b_canonical_perpos_v1/**/summary.parquet
